# qp_planner

./: CMakeLists.txt  README.md  package.xml
include/: cubic_spline.h  modified_reference_path_generator.h  qp_planner.h  qp_planner_ros.h  reference_path.h
launch/: qp_planner.launch
src/: modified_reference_path_generator.cpp  qp_planner.cpp  qp_planner_node.cpp  qp_planner_ros.cpp
